Added button for adding lists

--- a/index.html
+++ b/index.html
@@ -14,24 +14,27 @@
 
 <body>
 
-    <div class="page grid g-clf">        
-        <ul class="column column_xs-4">
-            <li draggable="true">A</li>
-            <li draggable="true">B</li>
-            <li draggable="true">C</li>
-        </ul>
-        <ul class="column column_xs-4">
-            <li draggable="true">1</li>
-            <li draggable="true">2</li>
-            <li draggable="true">3</li>
-        </ul>
-        <ul class="column column_xs-4">
-            <li draggable="true">X</li>
-            <li draggable="true">Y</li>
-            <li draggable="true">Z</li>
-        </ul>
-    </div>
-    
+    <button class="add-list">Добавить список</button>
+
+    <div class="page grid">
+        <div class="row g-clf">
+            <ul class="column column_xs-4">
+                <li draggable="true">A</li>
+                <li draggable="true">B</li>
+                <li draggable="true">C</li>
+            </ul>
+            <ul class="column column_xs-4">
+                <li draggable="true">1</li>
+                <li draggable="true">2</li>
+                <li draggable="true">3</li>
+            </ul>
+            <ul class="column column_xs-4">
+                <li draggable="true">X</li>
+                <li draggable="true">Y</li>
+                <li draggable="true">Z</li>
+            </ul>
+        </div>
+    </div>    
 
     <script src="assets/js/libs/jquery-1.11.0.min.js"></script>
     <script src="src/js/common.js"></script>
